--- a/uuid_test.html
+++ b/uuid_test.html
@@ -2,11 +2,13 @@
 
 <html>
   <head>
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>uuid_test</title>
+    <link rel="stylesheet" type="text/css" href="./teaolive/style.css" charset="utf-8">
   </head>
   <body>
     <h1>uuid_test</h1>
-    <h2 id="status">dart is not running</h2>
+    <h2 id="result">dart is not running</h2>
     <script type="application/dart" src="uuid_test.dart"></script>
     <script src="http://dart.googlecode.com/svn/branches/bleeding_edge/dart/client/dart.js"></script>
   </body>
